# django-tofu-aws-template

./: .env.tmp  .gitignore  Makefile  README.md  init.sql  main.tf  outputs.tf  pyproject.toml  variables.tf
.github-example/workflows/: deploy.yaml
docker/: Dockerfile.base
examples/: docker-compose-release.yaml  docker-compose.yml
examples/.github/workflows/: deploy.yaml
examples/django-config/config/: wsgi.py
examples/terragrunt/staging/: .terraform.lock.hcl  terragrunt.hcl
infra/envs/: terragrunt.hcl
infra/envs/local/: .terraform.lock.hcl  terragrunt.hcl
infra/envs/production/: terragrunt.hcl
infra/envs/staging/: terragrunt.hcl
infra/terraform/: docker-compose-release.yaml  main.tf  variables.tf
infra/terraform/ec2/: main.tf  variables.tf
infra/terraform/loadbalancer/: main.tf  outputs.tf  variables.tf
infra/terraform/rds/: main.tf  variables.tf
infra/terraform/vpc/: main.tf
modules/ec2/: main.tf  outputs.tf  variables.tf
modules/ecr/: main.tf  outputs.tf
modules/loadbalancer/: main.tf  outputs.tf  variables.tf
modules/nat/: main.tf  variables.tf
modules/rds/: main.tf  outputs.tf  variables.tf
modules/securitygroups/: main.tf  outputs.tf  variables.tf
project/config/: asgi.py  urls.py
project/config/settings/: base.py  local.py  staging.py
