[tool.poetry]
name = "{FILL_HERE}-backend"
version = "0.1.0"
description = ""
authors = ["eyal-mor <eyalmor.ent@gmail.com>"]
readme = "README.md"
packages = [{include = "{FILL_HERE}_server"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
markdown = "^3.5.1"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
django-oauth-toolkit = "^2.3.0"
celery = {extras = ["sqs"], version = "^5.3.6"}
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
django-health-check = "^3.17.0"
whitenoise = "^6.6.0"
django-celery-results = "^2.5.1"
psycopg = [
    {extras = ["binary", "pool"], version = "^3.1.16", platform = "darwin"},
    {extras = ["binary", "pool", "c"], version = "^3.1.16", platform = "linux"},
]
uvicorn = "^0.25.0"
gunicorn = "^21.2.0"
djangorestframework-simplejwt = "^5.3.1"
django-storages = {extras = ["s3"], version = "^1.14.2"}
pydantic = "^2.5.3"
drf-nested-routers = "^0.93.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
ipdb = "^0.13.13"
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^23.12.1"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120